app/assets/stylesheets/styles.css.scss
$btn-default-bg: green;
$btn-default-color: white;
$navbar-default-bg: white;
$navbar-default-border: white;
@import 'bootstrap';


 #recipe{
  margin: 5%;
  text-align: center;
  margin-left: 20%;
  padding-bottom: 10%;
  padding: 0%;
  font-size: 110%;
  line-height: 1.4em;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  width: 80%;
  background-color: #e3e3e3;
 }

  #recipe h1{
  text-align: center;
  color: black;
  display: inline-block;
  border-radius: 0%;
   }

#editUser{
  margin: 5%;
  margin-left: 30%;
  padding-bottom: 20%;
  padding: 3%;
  font-size: 11px;
  line-height: 1.4em;
  float: left;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  width: 50%;
   background-color: white;
}
.comments{
 margin: 8%;
 margin-top: -15%;
  margin-left: 30%;
  padding: 5%;
  font-size: 11px;
  line-height: 1.4em;
  float: left;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  width: 100%;
   background-color: white;
  
}
#about{ 
  margin: 8%;
  margin-left: 20%;
  padding: 2%;
  font-size: 11px;
  line-height: 1.4em;
  float: left;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  width: 70%;
   background-color: white;

}
 

body {
  padding-top: 60px;
  background-image: url(/img/bg.jpg);
}

// @import 'bootstrap-responsive';

.footer {
  margin-top: 50px;
  color: $gray;
  a {
      color: $gray;
  }
}

// required for jQuery Masonry

.box {
  margin: 1%;
  padding: .5%;
  font-size: 100%;
  line-height: 1.4em;
  float: left;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  width: 40%;
   background-color: white;
}

.box2{
  margin: 2%;
  margin-left: 30%;
  font-size: 100%;
  line-height: 1.4em;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  width: 100%;
  background-color: white;

}

  .box2 .title{
     text-align: center;
    padding-bottom: 10px;
     font-weight: bold;
     font-size: 140%;
      text-decoration: underline;

  }

  .box2 .content{
      padding-left: 3%;
      background-color: white;
    font-size: 100%;
      
       
    }
    .box2 .content .recipelist{ 
    white-space: pre-line;
    margin-bottom: -15%;
    
    
    }

    .box2 .content .steplist{ 
    margin-top: 15%;
    white-space: pre-line;; 
    margin-bottom: -15%;
    font-size: 100%;
    }


  .box2 .recipeUser{
    text-align: center;
  }
  
  .box .ButtonRecipeShow{
   text-align: center;
     
  }

.box img{
  display: block;
  width: 100%;
   -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}

.title{
  margin: 10px 0 5px;
}

.description{
  margin: 10% 0 5px;
}

.blockquote {
font-family: Georgia, serif;
font-size: 18px;
font-style: italic;
width: 400px;
margin: 0.25em 0;
padding: 0.35em 40px;
line-height: 1.45;
position: relative;
color: #383838;
}

.blockquote:before {
display: block;
padding-left: 10px;
content: "\201C";
font-size: 80px;
position: absolute;
left: -20px;
top: -20px;
color: #7a7a7a;
}

.blockquote cite {
color: #999999;
font-size: 14px;
display: block;
margin-top: 5px;
}

.blockquote cite:before {
content: "\2014 \2009";
}

